@@ -26,9 +26,6 @@
  *  LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY
  *  OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
  *  SUCH DAMAGE.
- *
- *
- *  $Id: machine.h,v 1.182.2.2 2008-06-10 00:18:05 debug Exp $
  */
 
 #include <sys/types.h>
@@ -266,6 +263,7 @@ struct machine {
 #define	MACHINE_BAREM88K	7000
 #define	MACHINE_TESTM88K	7001
 #define	MACHINE_MVME88K		7002
+#define	MACHINE_LUNA88K		7003
 
 /*  M32R:  */
 #define	MACHINE_BAREM32R	8000
@@ -349,6 +347,10 @@ struct machine {
 #define	MACHINE_MVME88K_187		1
 #define	MACHINE_MVME88K_188		2
 #define	MACHINE_MVME88K_197		3
+
+/*  LUNA88K  */
+#define	MACHINE_LUNA_88K		1
+#define	MACHINE_LUNA_88K2		2
 
 
 /*  For the automachine system:  */
