@@ -1,7 +1,5 @@
 #
-#  $Id: Makefile.skel,v 1.43 2007-06-19 02:11:46 debug Exp $
-#
-#  Makefile for GXemul machines
+# Makefile for GXemul machines
 #
 
 CFLAGS=$(CWARNINGS) $(COPTIM) $(XINCLUDE) $(DINCLUDE)
@@ -9,10 +7,10 @@ OBJS=	machine.o \
 	machine_algor.o machine_alpha.o machine_arc.o machine_bebox.o \
 	machine_cats.o machine_cobalt.o machine_dreamcast.o machine_evbmips.o \
 	machine_hpcarm.o machine_hpcmips.o machine_hpcsh.o machine_iq80321.o \
-	machine_iyonix.o machine_landisk.o machine_macppc.o machine_mvme88k.o \
-	machine_mvmeppc.o machine_netwinder.o machine_playstation2.o \
-	machine_pmax.o machine_pmppc.o machine_prep.o machine_qemu.o \
-	machine_sgi.o machine_sparc.o machine_test.o 
+	machine_iyonix.o machine_landisk.o machine_luna88k.o machine_macppc.o \
+	machine_mvme88k.o machine_mvmeppc.o machine_netwinder.o \
+	machine_playstation2.o machine_pmax.o machine_pmppc.o machine_prep.o \
+	machine_qemu.o machine_sgi.o machine_sparc.o machine_test.o 
 
 all:
 	$(MAKE) objs
